sass/layout/_layout.scss
/**
 * Layout
 *
 * @author magnify
 */


body {
  @include zen-grid-container();

  padding-top: 75px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  /* Correct for font line height */
  margin-top: -9px;
}

figure {
  background: $border-dottet-small;
}

figcaption {
  margin-bottom: 30px;
  padding-top: 20px;
  padding-bottom: 30px;

  color: $gray-darker;
}


.top-link {
  @extend %base-button;
  @extend %button-smaller;
  @include border-radius(4px 4px 0 0);
  @include box-sizing(border-box);

  bottom: 0;
  position: fixed;
  left: 50%;
  right: 50%;
  z-index: 99;


  display: none;
  margin-left: -75px;
  width: 150px;

  background-color: $gray-darker;

  &:focus,
  &:hover {
    background-color: lighten($gray-darker, 5%);
  }

  &:active {
    background-color: darken($gray-darker, 5%);
  }
}

%layout-wrapper {
  max-width: 1200px;
  margin-right: auto;
  margin-left: auto;
}


.header {
  background-color: transparentize($white, .05);
  background-image: url('/images/header-colors.png');
  background-position: left bottom ;
  background-repeat: repeat-x;

  @include zen-grid-item(12, 1);
  @include background-size(100% auto);

  position: fixed;
  z-index: 99;
  top: 0;
}

.header--inner {
  @extend %layout-wrapper;

  min-height: 80px;
}

.logo--link {
  @include zen-grid-item(6, 1);
  @include zen-nested-container();

  margin-top: 15px;

  @include third-breakpoint() {
    @include zen-grid-item(10, 1);
    @include zen-nested-container();
  }

  @include last-breakpoint() {
    @include zen-grid-item(12, 1);

    margin-top: 22px;
  }
}

.logo {
  max-width: 325px;

  @include last-breakpoint() {
    max-width: 100%;
  }
}

.navigation {
  @include zen-grid-item(6, 1, right);
  @include zen-nested-container();

  margin-top: 25px;

  font-family: "Source Sans Pro Light";
  font-size: 120%;
  text-align: right;

  /* Links in navigation */
  a {
    margin-left: 50px;
  }

  a:link {
    color: lighten($black, 50%);
    text-decoration: none;
  }

  a:visited {
    color: lighten($black, 25%);
  }

  a:hover {
    color: $link-color-hover;
  }

  a:focus {
    color: $link-color;
  }

  @include third-breakpoint() {
    display: none;
  }
}

.js-scrolling {
  .navigation--top {
    display: inline-block;
  }
}

.navigation--top {
  display: none;
}


/* Primary content
   ========================================================================== */

.primary-content {
  @include zen-clear(both);
  @include zen-grid-container();
  @include background-size(cover);

  margin-bottom: 70px;
  position: relative;

  background-image: url('/images/header-background.jpg');
  background-repeat: no-repeat;

  @include fourth-breakpoint() {
    margin-bottom: 40px;
  }
}

.primary-content--inner {
  @extend %layout-wrapper;
}

.primary-content--image {
  @include zen-grid-item(5, 1);

  bottom: 0;
  display: inline-block;
  margin-top: 50px;
  max-width: 450px;
  padding-right: 50px;
  position: absolute;

  @include fourth-breakpoint() {
    display: none;
  }
}


/* Contact box
   ========================================================================== */

.contact-box--content {
  @include zen-grid-item(7, 1, right);
  @include box-sizing(border-box);

  display: inline-block;
  padding-top: 125px;
  padding-bottom: 125px;

  vertical-align: top;

  @include first-breakpoint() {
    padding-top: 65px;
    padding-bottom: 65px;
  }

  @include third-breakpoint() {
    padding-top: 55px;
    padding-left: 35px;
  }

  @include fourth-breakpoint() {
    @include zen-grid-item(12, 1);

    background-color: transparentize($white, .5);

    padding-top: 35px;
    padding-bottom: 35px;
  }

  @include last-breakpoint() {
    padding-right: 20px;
    padding-left: 20px;
  }
}

.contact-box--heading {
  font-size: $font-size-giga;

  @include second-breakpoint() {
    font-size: $font-size-mega;
  }

  @include fourth-breakpoint() {
    display: none;
  }
}

.contact-box--lead {
  margin-bottom: 20px;

  font-size: $font-size-larger;

  @include second-breakpoint() {
    font-size: $font-size-large;
  }
}

.contact-box--text {
  margin-bottom: 30px;

  font-family: "Source Sans Pro Light";
  font-size: $font-size-large;

  @include second-breakpoint() {
    font-size: $font-size-medium;
  }
}

.contact-box--link {
  @extend %action-button;
  @extend %button-large;

  @include second-breakpoint() {
    padding-top: 10px;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-left: 30px;

    font-size: $font-size-larger;
  }
}


/* Secondary content
   ========================================================================== */

.secondary-content {
  @include zen-clear(both);
  @include zen-grid-container();
  @extend %layout-wrapper;

  margin-bottom: 70px;
  padding-bottom: 70px;

  background: $border-dottet-large;

  @include third-breakpoint() {
    margin-right: 20px;
    margin-left: 20px;
  }

  @include fourth-breakpoint() {
    margin-bottom: 40px;
    padding-bottom: 40px;
  }
}


/* Focus boxes
   ========================================================================== */

.focus-box--first {
  @include zen-grid-item(2.5, 1.5);

  @include third-breakpoint() {
    @include zen-grid-item(5, 1.5);

  }

  @include last-breakpoint() {
    margin-bottom: 40px;
    padding-bottom: 40px;

    background: $border-dottet-small;
  }
}

.focus-box--second {
  @include zen-grid-item(2.5, 5.5);

  @include third-breakpoint() {
    @include zen-grid-item(5, 1.5, right);
  }
}

.focus-box--third {
  @include zen-grid-item(2.5, 9.5);

  @include third-breakpoint() {
    @include zen-clear();
    @include zen-grid-item(12, 1);
  }
}

.focus-box--first,
.focus-box--second,
.focus-box--third {
  padding-right: 0;
  padding-left: 0;

  text-align: center;

  @include third-breakpoint() {
    padding-right: 20px;
  }

  @include last-breakpoint() {
    @include zen-clear();
    @include zen-grid-item(12, 1);
    @include zen-nested-container();
  }
}
/* ... */

